# svg-typography-rust

./: .gitignore  Cargo.toml  ocr.py  requirements.txt  ui.ipynb  visualize.py
fontMatching/: fontGen.py  model.py  scoring.py
jsons/: Blush Modern Stylish New Post Instagram Post.svg.json  Orange and Yellow Playful Organic Autumn Instagram Post.svg.json  chart.svg.json  circle.svg.json  fashionad.svg.json  firenze.svg.json  sawthesign.svg.json  text cool.svg.json  whatislove.svg.json
ocrcache/: Blush Modern Stylish New Post Instagram Post.svg.png.json  Orange and Yellow Playful Organic Autumn Instagram Post.svg.png.json  chart.svg.png.json  circle.svg.png.json  fashionad.svg.png.json
src/: main.rs
