[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rctree = "0.5.0"
resvg = "0.33.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
svg = "0.18.0"
usvg = "0.33.0"
